<resources>
    <string name="app_name">day08</string>
    <string name="user_name">사용자 이름</string>
    <string name="user_email">이메일</string>
    <string name="ok">확인</string>
    <string name="show_input_dialog">입력창</string>
    <string name="toast_message">토스트 메시지</string>
    <string name="example01">example01 - MyDialog : name, email</string>
    <string name="example02">example02 - Toast message</string>
    <string name="example03">example03 - Resource - @string, @string-array, @colors</string>
</resources>
